test/Fail/Issue857b.err
Issue857b.agda:35.7-11: error: [UnequalTerms]
⊥-elim x != (λ ()) x of type A
when checking that the expression refl has type ⊥-elim ≡ (λ ())
